a bit of cleanup in examples, merge sort through indexing done